<resources>
    <string name="app_name">PPMToolMobile</string>

    <string name="remindMe2Weeks">2 weeks before</string>
    <string name="remindMe1Week">1 week before</string>
    <string name="remindMe1Day">1 day before</string>
    <string name="remindMe1Hour">1 hour before</string>
    <string name="remindMe30Minutes">30 minutes before</string>
    <string name="emailAddress">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="accountPrompt">Already have an account?</string>
    <string name="noAccountPrompt">Don\'t have an account?</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>