<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="35dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginTextView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.03"
            android:text="Login with "
            android:textAlignment="textStart"
            android:textColor="@color/dark_black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/loginTextView2"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.03"
            android:text="PPMTool"
            android:textAlignment="textStart"
            android:textColor="@color/dark_black"
            android:textSize="22sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/loginTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:letterSpacing="-0.01"
        android:layout_marginTop="3dp"
        android:text="We do not share or collect your data"
        android:layout_marginBottom="35dp"
        android:textAlignment="textStart"
        android:textColor="@color/dark_blue_gray"
        android:textSize="12sp" />




    <EditText
        android:id="@+id/loginEmailAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_default"
        android:textSize="15sp"
        android:letterSpacing="-0.01"
        android:hint="@string/emailAddress"
        android:textColorHint="@color/dark_blue_gray"
        android:textColor="@color/dark_black"
        android:fontFamily="@font/roboto"/>


        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_default"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="8dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:letterSpacing="-0.01"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textSize="15sp" />

    <CheckBox
        android:id="@+id/loginRememberMeCheckbox"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:buttonTint="@color/primary_purple"
        android:text="Remember me"
        android:fontFamily="@font/roboto"
        android:textColor="@color/dark_black"
        android:textSize="14sp"
        android:letterSpacing="-0.01"
    />


    <!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:layout_height="wrap_content">-->


<!--        <View-->
<!--            android:id="@+id/SplitLine_hor1"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height= "1dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@color/light_blue_gray" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:paddingRight="10dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:textColor="@color/dark_gray"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="13sp"-->
<!--            android:text="Or"/>-->

<!--        <View-->
<!--            android:id="@+id/SplitLine_hor2"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height= "1dp"-->
<!--            android:background="@color/light_blue_gray" />-->



<!--    </LinearLayout>-->




<!--    <Button-->
<!--        android:id="@+id/loginGoogleBtn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="45dp"-->
<!--        android:paddingRight="10dp"-->

<!--        android:background="@drawable/outline_button"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:textSize="13sp"-->
<!--        android:drawableLeft="@drawable/ic_google_logo"-->
<!--        android:drawablePadding="50dp"-->
<!--        android:textColor="@color/dark_gray"-->
<!--        android:elevation="10dp"-->
<!--        android:letterSpacing="-0.01"-->
<!--        android:text="Continue with Google"-->
<!--        android:textAllCaps="false"-->
<!--        app:backgroundTint="@null" />-->

<!--    <Button-->
<!--        android:id="@+id/loginFacebookBtn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="45dp"-->
<!--        android:paddingRight="10dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:background="@drawable/outline_button"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:textSize="13sp"-->
<!--        android:drawableLeft="@drawable/ic_facebook_logo"-->
<!--        android:drawablePadding="50dp"-->
<!--        android:textColor="@color/dark_gray"-->
<!--        android:elevation="10dp"-->
<!--        android:letterSpacing="-0.01"-->
<!--        android:text="Continue with Facebook"-->
<!--        android:textAllCaps="false"-->
<!--        app:backgroundTint="@null" />-->


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="-0.01"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:visibility="gone">


    </ProgressBar>



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/registerPromptTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.02"
            android:text="@string/noAccountPrompt"
            android:textAlignment="textStart"
            android:textColor="@color/dark_blue_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/registerPromptTextView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.02"
            android:text="@string/register"
            android:textAlignment="textStart"
            android:textColor="@color/primary_purple"
            android:textSize="13sp" />

    </LinearLayout>





    <!--    </LinearLayout>-->
</LinearLayout>