<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileNavigationBack"
                android:layout_width="wrap_content"
                android:layout_height="23dp"

                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_navigation_back" />


            <TextView
                android:id="@+id/profileTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_flex"
                android:letterSpacing="-0.01"
                android:text="@string/my_profile"
                android:textAlignment="center"
                android:textColor="@color/dark_black"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profileMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dotted_menu_dark" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/avatarProgressBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/userAvatarImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_user_avatar_default" />

        <TextView
            android:id="@+id/changeUserAvatarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:fontFamily="@font/roboto_flex"
            android:letterSpacing="-0.01"
            android:text="@string/change"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_gray"
            android:textSize="11sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:padding="15dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_flex"
            android:letterSpacing="-0.01"
            android:text="First name"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textFontWeight="600"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/profileFirstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline"
            android:fontFamily="@font/roboto_flex"
            android:hint="First name"
            android:paddingLeft="15dp"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_flex"
            android:letterSpacing="-0.01"
            android:text="Last name"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textFontWeight="600"
            android:textSize="11sp" />


        <EditText
            android:id="@+id/profileLastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:background="@drawable/input_outline"
            android:fontFamily="@font/roboto_flex"
            android:hint="Last name"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textSize="13sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_flex"
            android:letterSpacing="-0.01"
            android:text="Email address"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textFontWeight="600"
            android:textSize="11sp" />


        <EditText
            android:id="@+id/profileEmailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:background="@drawable/input_outline"
            android:fontFamily="@font/roboto_flex"
            android:hint="Email address"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_blue_gray"
            android:textSize="13sp" />


        <!--        <EditText-->
        <!--            android:id="@+id/profilePasswordEditText"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:background="@drawable/input_default"-->
        <!--            android:fontFamily="@font/roboto"-->
        <!--            android:hint="Password"-->
        <!--            android:textColor="@color/dark_black"-->
        <!--            android:textColorHint="@color/dark_blue_gray"-->
        <!--            android:textSize="15sp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/profileUpdateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:fontFamily="@font/roboto_flex"
                android:textFontWeight="600"
                android:letterSpacing="-0.01"
                android:stateListAnimator="@null"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:backgroundTint="@color/primary_purple" />

            <Button
                android:id="@+id/profileCancelUpdateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:fontFamily="@font/roboto_flex"
                android:textFontWeight="600"
                android:letterSpacing="-0.01"
                android:stateListAnimator="@null"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/dark_black"
                android:textSize="13sp"
                app:backgroundTint="@color/white" />


        </LinearLayout>


        </LinearLayout>


    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/dark_blue_gray"
            app:itemIconTint="@color/primary_purple"
            app:itemTextColor="@color/dark_black"
            app:menu="@menu/nav_menu" />
    </LinearLayout>


</RelativeLayout>