<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/white"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".EditProjectActivity"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/editProjectNavigationBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_navigation_back"
                android:layout_marginRight="20dp">
            </ImageView>


            <TextView
                android:id="@+id/addProjectTitleTextView2"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="-0.01"
                android:layout_weight="1"
                android:text="Edit project"
                android:textColor="@color/dark_black"
                android:textSize="20sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/rer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="2dp"
            android:text="Project title"
            android:textColor="@color/dark_black"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/editProjectTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/input_default"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/dark_blue_gray"
            android:textColor="@color/dark_black"
            android:hint="Project title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/re3r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:text="Project description"
            android:textColor="@color/dark_black"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/editProjectDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="110dp"

            android:background="@drawable/input_default"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/dark_blue_gray"
            android:textColor="@color/dark_black"
            android:hint="Project description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/re333r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:text="Project due date"
            android:textColor="@color/dark_black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editProjectDueDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_default"
            android:fontFamily="@font/roboto"
            android:editable="false"
            android:textColorHint="@color/dark_blue_gray"
            android:textColor="@color/dark_black"
            android:hint="Select due date"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/fe44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:text="Project due time"
            android:textColor="@color/dark_black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editProjectDueTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_default"
            android:fontFamily="@font/roboto"
            android:editable="false"
            android:textColorHint="@color/dark_blue_gray"
            android:textColor="@color/dark_black"
            android:hint="Project due time"
            android:textSize="15sp" />




        <TextView
            android:id="@+id/editProjectRemindMeTitleTextView"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.01"
            android:layout_marginTop="30dp"
            android:text="Remind me"
            android:textColor="@color/dark_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editProjectRemindMeDescriptionTextView"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:text="Send a notification when a project is closing on a due date"
            android:textColor="@color/dark_blue_gray"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/editProjectRemindMe2WeeksCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:buttonTint="@color/primary_purple"
            android:backgroundTint="@color/primary_purple"
            android:letterSpacing="-0.01"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/remindMe2Weeks"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/editProjectRemindMe1WeekCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:buttonTint="@color/primary_purple"
            android:backgroundTint="@color/primary_purple"
            android:letterSpacing="-0.01"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/remindMe1Week"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/editProjectRemindMe1DayCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:buttonTint="@color/primary_purple"
            android:backgroundTint="@color/primary_purple"
            android:letterSpacing="-0.01"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/remindMe1Day"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/editProjectRemindMe1HourCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:buttonTint="@color/primary_purple"
            android:backgroundTint="@color/primary_purple"
            android:letterSpacing="-0.01"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/remindMe1Hour"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/editProjectRemindMe30MinutesCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:buttonTint="@color/primary_purple"
            android:backgroundTint="@color/primary_purple"
            android:letterSpacing="-0.01"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/remindMe30Minutes"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/editProjectPriorityTitleTextView"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.01"
            android:layout_marginTop="30dp"
            android:text="Project priority"
            android:textColor="@color/dark_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editProjectPriorityDescriptionTextView"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:text="Shows the urgency of the project"
            android:textColor="@color/dark_blue_gray"
            android:textSize="12sp" />




        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:id="@+id/editProjectPriorityRadioGroup">

            <RadioButton
                android:id="@+id/projectPriorityHighRadioBtn"
                android:layout_width="wrap_content"
                android:buttonTint="@color/primary_purple"
                android:backgroundTint="@color/primary_purple"
                android:layout_height="wrap_content"
                android:text="High"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/projectPriorityMediumRadioBtn"
                android:layout_width="wrap_content"
                android:buttonTint="@color/primary_purple"
                android:backgroundTint="@color/primary_purple"
                android:layout_height="wrap_content"
                android:text="Medium" />

            <RadioButton
                android:id="@+id/projectPriorityLowRadioBtn"
                android:layout_width="wrap_content"
                android:buttonTint="@color/primary_purple"
                android:backgroundTint="@color/primary_purple"
                android:layout_height="wrap_content"
                android:text="Low" />

        </RadioGroup>


            <TextView
                android:id="@+id/editProjectChecklistTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="-0.01"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="Project checklist"
                android:textColor="@color/dark_black"
                android:textSize="18sp" />



        <TextView
            android:id="@+id/editProjectChecklistDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="2dp"
            android:letterSpacing="-0.01"
            android:text="Create tasks to easily manage your project "
            android:textColor="@color/dark_blue_gray"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editProjectChecklistEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/input_default"
                android:fontFamily="@font/roboto"
                android:hint="Add item"
                android:textColor="@color/dark_black"
                android:textColorHint="@color/dark_blue_gray"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/editProjectChecklistBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/ic_checklist_add" />

            <!--        <ImageButton-->
            <!--            android:id="@+id/addProjectChecklistBtn"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="center"-->
            <!--            android:background="@null"-->
            <!--            android:src="@drawable/ic_checklist_add_success" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/editProjectChecklistListView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="12dp" />

        </LinearLayout>






        <Button
            android:id="@+id/editProjectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/primary_button"
            android:stateListAnimator="@null"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.01"
            android:paddingRight="10dp"
            android:text="Save changes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>